--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -38,9 +38,6 @@
 		<unitils.version>3.3</unitils.version>
 		<hibernate.version>4.2.0.Final</hibernate.version>
 
-		<!--DB实现以及MVC模型的实现支持，不要修改这两个值 -->
-		<dbProtocol>JPA</dbProtocol>
-		<mvcProtocol>SpringMVC</mvcProtocol>
 
 		<!-- DB config -->
 		<db.type>h2</db.type>
