--- a/openci-platform-applicationImpl/pom.xml
+++ b/openci-platform-applicationImpl/pom.xml
@@ -1,118 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
-    <modelVersion>4.0.0</modelVersion>  
-    <parent> 
-        <groupId>com.xiaokaceng.openci</groupId>  
-        <artifactId>openci-platform</artifactId>  
-        <version>1.0.0-SNAPSHOT</version> 
-    </parent>  
-    <artifactId>openci-platform-applicationImpl</artifactId>  
-    <name>openci-platform-applicationImpl</name>  
-    <packaging>jar</packaging>  
-    <url>http://maven.apache.org</url>  
-    <properties> 
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
-        <project.type>applicationImpl</project.type>  
-        <base.package>com.xiaokaceng.openci.application.impl</base.package> 
-    </properties>  
-    <dependencies> 
-        <dependency> 
-            <groupId>junit</groupId>  
-            <artifactId>junit</artifactId>  
-            <scope>test</scope> 
-        </dependency>  
-        <dependency> 
-            <groupId>com.xiaokaceng.openci</groupId>  
-            <artifactId>openci-platform-domain</artifactId>  
-            <version>${project.parent.version}</version> 
-        </dependency>  
-        <dependency> 
-            <groupId>com.xiaokaceng.openci</groupId>  
-            <artifactId>openci-platform-application</artifactId>  
-            <version>${project.parent.version}</version> 
-        </dependency>  
-        <dependency> 
-            <groupId>com.xiaokaceng.openci</groupId>  
-            <artifactId>openci-platform-infra</artifactId>  
-            <version>${project.parent.version}</version> 
-        </dependency>  
-        <dependency> 
-            <groupId>com.xiaokaceng.openci</groupId>  
-            <artifactId>openci-platform-conf</artifactId>  
-            <version>${project.parent.version}</version>  
-            <type>test-jar</type>  
-            <scope>test</scope> 
-        </dependency>  
-        <dependency> 
-            <groupId>org.hibernate</groupId>  
-            <artifactId>hibernate-entitymanager</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>org.openkoala.koalacommons</groupId>  
-            <artifactId>koala-commons-ui-support</artifactId> 
-        </dependency>  
-        <!-- 加入对查询通道的依赖 -->  
-        <dependency> 
-            <groupId>com.dayatang.commons</groupId>  
-            <artifactId>dayatang-commons-querychannel</artifactId> 
-        </dependency>  
-        <!-- 加入对dayatang的DB的支持 -->  
-        <dependency> 
-            <groupId>com.dayatang.commons</groupId>  
-            <artifactId>dayatang-commons-db</artifactId> 
-        </dependency>  
-        <!-- 加入对dayatang的spring的实现 -->  
-        <dependency> 
-            <groupId>com.dayatang.commons</groupId>  
-            <artifactId>dayatang-commons-spring</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>proxool</groupId>  
-            <artifactId>proxool</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>proxool</groupId>  
-            <artifactId>proxool-cglib</artifactId> 
-        </dependency>  
-        <!-- 加入对测试的支持包 -->  
-        <dependency> 
-            <groupId>c3p0</groupId>  
-            <artifactId>c3p0</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>com.dayatang.commons</groupId>  
-            <artifactId>dayatang-commons-spring-test</artifactId>  
-            <scope>test</scope> 
-        </dependency>  
-        <!-- 加入Spring对JPA的支持 -->  
-        <dependency> 
-            <groupId>org.springframework.data</groupId>  
-            <artifactId>spring-data-jpa</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>commons-dbcp</groupId>  
-            <artifactId>commons-dbcp</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>com.dayatang.commons</groupId>  
-            <artifactId>dayatang-commons-hibernate</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>org.hibernate</groupId>  
-            <artifactId>hibernate-validator</artifactId> 
-        </dependency>  
-        <!-- 加入Spring对JPA的支持 -->  
-        <dependency> 
-            <groupId>org.springframework.data</groupId>  
-            <artifactId>spring-data-jpa</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>org.openkoala.koalacommons</groupId>  
-            <artifactId>koala-commons-support</artifactId> 
-        </dependency> 
-    </dependencies>  
-    <build> 
-        <plugins></plugins> 
-    </build> 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.xiaokaceng.openci</groupId>
+		<artifactId>openci-platform</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>openci-platform-applicationImpl</artifactId>
+	<name>openci-platform-applicationImpl</name>
+	<packaging>jar</packaging>
+	<dependencies>
+		<dependency>
+			<groupId>com.xiaokaceng.openci</groupId>
+			<artifactId>openci-platform-application</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		
+		<!-- 加入对dayatang的spring的实现 -->
+		<dependency>
+			<groupId>com.dayatang.commons</groupId>
+			<artifactId>dayatang-commons-spring</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.dayatang.commons</groupId>
+			<artifactId>dayatang-commons-spring-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.dayatang.commons</groupId>
+			<artifactId>dayatang-commons-hibernate</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>${jdbc.groupId}</groupId>
+			<artifactId>${jdbc.artifactId}</artifactId>
+			<version>${jdbc.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
