--- a/openci-platform-web/src/main/webapp/WEB-INF/web.xml
+++ b/openci-platform-web/src/main/webapp/WEB-INF/web.xml
@@ -5,57 +5,68 @@
 	id="WebApp_ID" version="2.5">
 	<display-name>openci-platform-web</display-name>
 
+	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>openci-platform</param-value>
+	</context-param>
+	<context-param>
+		<param-name>contextClass</param-name>
+		<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+	</context-param>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>com.xiaokaceng.openci.web.spring</param-value>
+	</context-param>
+
 	<!-- Character Filter -->
 	<filter>
-		<filter-name>encodingFilter</filter-name>
+		<filter-name>characterEncodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
 		</init-param>
 	</filter>
-	
-	   
+	<filter-mapping>
+		<filter-name>characterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>openSessionInView</filter-name>
+		<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>openSessionInView</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
-
-	
-	   
-	
-
-	<!-- Spring Listener -->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:META-INF/spring/root.xml</param-value>
-	</context-param>
 	<listener>
 		<listener-class>com.dayatang.spring.webapp.DayatangContextLoaderListener</listener-class>
 	</listener>
-	
-	<!--组织子系统的listener-->
 
 	<session-config>
 		<session-timeout>120</session-timeout>
 	</session-config>
 
-       
-        	<!-- 加入SpringMVC -->
-	 <servlet>
-		<servlet-name>spring</servlet-name>
+	<!-- Spring MVC Servlet -->
+	<servlet>
+		<servlet-name>springServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:koala-spring-servlet.xml</param-value>
+			<param-value>classpath*:spring-mvc.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-  
-	  <servlet-mapping>
-	  	<servlet-name>spring</servlet-name>
-	  	<url-pattern>*.koala</url-pattern>
-	  </servlet-mapping>
-        
- 
- 
+	<servlet-mapping>
+		<servlet-name>springServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<welcome-file-list>
+		<welcome-file>login.jsp</welcome-file>
+	</welcome-file-list>
+
 	<error-page>
 		<error-code>404</error-code>
 		<location>/error/404.html</location>
@@ -64,10 +75,9 @@
 		<error-code>500</error-code>
 		<location>/error/500.html</location>
 	</error-page>
-	
+
 	<welcome-file-list>
 		<welcome-file>/login.jsp</welcome-file>
 	</welcome-file-list>
 
-	<distributable />
 </web-app>
