--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
 	<properties>
 		<!-- version config -->
-		<dayatang.commons.version>3.7</dayatang.commons.version>
+		<dayatang.commons.version>3.6</dayatang.commons.version>
 		<spring.version>3.2.5.RELEASE</spring.version>
 		<koala.framework.version>2.1.0-SNAPSHOT</koala.framework.version>
 		<quartz.version>2.1.3</quartz.version>
@@ -39,7 +39,7 @@
 		<hibernate.version>4.2.0.Final</hibernate.version>
 
 		<!-- DB config -->
-		<db.type>h2</db.type>
+		<db.type>H2</db.type>
 		<db.host>localhost</db.host>
 		<db.name>openci_platform</db.name>
 		<dbunit.operation.type>CLEAN_INSERT</dbunit.operation.type>
@@ -143,6 +143,11 @@
 			<dependency>
 				<groupId>com.dayatang.commons</groupId>
 				<artifactId>dayatang-commons-hibernate</artifactId>
+				<version>${dayatang.commons.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.dayatang.commons</groupId>
+				<artifactId>dayatang-commons-utils</artifactId>
 				<version>${dayatang.commons.version}</version>
 			</dependency>
 
