忽略logs文件夹

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /openci-platform-web/.settings
 /openci-platform-web/target
 /openci-platform-web/.classpath
+/openci-platform-applicationImpl/logs
