--- a/openci-platform-web/src/main/webapp/WEB-INF/web.xml
+++ b/openci-platform-web/src/main/webapp/WEB-INF/web.xml
@@ -5,17 +5,22 @@
 	id="WebApp_ID" version="2.5">
 	<display-name>openci-platform-web</display-name>
 
-	<context-param>
+	<!-- <context-param>
 		<param-name>webAppRootKey</param-name>
 		<param-value>openci-platform</param-value>
 	</context-param>
 	<context-param>
 		<param-name>contextClass</param-name>
 		<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
-	</context-param>
-	<context-param>
+	</context-param> -->
+	<!-- <context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>com.xiaokaceng.openci.web.spring</param-value>
+	</context-param> -->
+
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath*:META-INF/spring/root.xml</param-value>
 	</context-param>
 
 	<!-- Character Filter -->
@@ -39,7 +44,7 @@
 		<filter-name>openSessionInView</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	
 	<listener>
 		<listener-class>com.dayatang.spring.webapp.DayatangContextLoaderListener</listener-class>
 	</listener>
