--- a/openci-platform-web/src/main/webapp/WEB-INF/web.xml
+++ b/openci-platform-web/src/main/webapp/WEB-INF/web.xml
@@ -74,11 +74,11 @@
 
 	<error-page>
 		<error-code>404</error-code>
-		<location>/error/404.html</location>
+		<location>/errors/404.html</location>
 	</error-page>
 	<error-page>
 		<error-code>500</error-code>
-		<location>/error/500.html</location>
+		<location>/errors/500.html</location>
 	</error-page>
 
 	<welcome-file-list>
