--- a/openci-platform-application/pom.xml
+++ b/openci-platform-application/pom.xml
@@ -35,6 +35,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.openkoala.plugin</groupId>
+			<artifactId>koala-plugin-create</artifactId>
+			<version>2.1.0-SNAPSHOT</version>
+		</dependency>
 		
 	</dependencies>
 </project>
