--- a/openci-platform-application/pom.xml
+++ b/openci-platform-application/pom.xml
@@ -39,6 +39,12 @@
 			<groupId>org.openkoala.plugin</groupId>
 			<artifactId>koala-plugin-create</artifactId>
 			<version>2.1.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>jaxen</groupId>
+					<artifactId>jaxen</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 	</dependencies>
