--- a/openci-platform-application/pom.xml
+++ b/openci-platform-application/pom.xml
@@ -17,7 +17,7 @@
 			<artifactId>openci-platform-domain</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<!-- OPENCIS -->
 		<dependency>
 			<groupId>org.openkoala.opencis</groupId>
@@ -81,16 +81,20 @@
 			<groupId>org.openkoala.plugin</groupId>
 			<artifactId>koala-plugin-create</artifactId>
 			<version>2.1.0-SNAPSHOT</version>
-			<!-- <exclusions>
+			<exclusions>
 				<exclusion>
-					<groupId>jaxen</groupId>
-					<artifactId>jaxen</artifactId>
+					<groupId>org.jdom</groupId>
+					<artifactId>jdom</artifactId>
 				</exclusion>
-			</exclusions> -->
+			</exclusions>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>2.0.2</version>
+		</dependency>
 	</dependencies>
-	
+
 	<properties>
 		<koala.opencis.version>2.1.0-SNAPSHOT</koala.opencis.version>
 	</properties>
