--- a/openci-platform-applicationImpl/pom.xml
+++ b/openci-platform-applicationImpl/pom.xml
@@ -26,6 +26,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 
 		<!-- TEST -->
 		<dependency>
