修复openci-git版本升级

--- a/openci-platform-application/pom.xml
+++ b/openci-platform-application/pom.xml
@@ -26,7 +26,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.openkoala.opencis</groupId>
-			<artifactId>koala-opencis-git</artifactId>
+			<artifactId>koala-opencis-gitlab</artifactId>
 			<version>${koala.opencis.version}</version>
 		</dependency>
 		<dependency>
