--- a/openci-platform-web/src/main/webapp/WEB-INF/web.xml
+++ b/openci-platform-web/src/main/webapp/WEB-INF/web.xml
@@ -78,7 +78,7 @@
 	</error-page>
 
 	<welcome-file-list>
-		<welcome-file>/index.html</welcome-file>
+		<welcome-file>/login.html</welcome-file>
 	</welcome-file-list>
 
 </web-app>
